@@ -47,6 +47,7 @@ Features
    * Allow image dimension not 4:3 changing a check of modulo 16 by modulo 8. (Jeroen Massar)
    * Added codec Ogg/Theora as new output format for regular movies.
      http://www.lavrsen.dk/foswiki/bin/view/Motion/OggTimelapse (Michael Luich)
+   * Added support for ffmpeg 0.11 new API.
 
 Bugfixes
    * Avoid segfault detecting strerror_r() version GNU or SUSv3. (Angel Carpintero)
